Implement proper Complex Gaussian wavelet and fix CGAU registration
Co-authored-by: c5473c4c <56372633+c5473c4c@users.noreply.github.com>